# simplebg

./: .gitignore  double-well-pertubation.sh  execute-main.sh  main.sh  main_sweep.sh  pyproject.toml  run_python.sh  view_molecules.ipynb  write-h5-files.sh
notebooks/: OppA_1b4z.ipynb  continuous_bondary_conditions.ipynb  visualize_ic.ipynb
params/: RNVPfwkl.yaml  RNVPrvkl.yaml  RQSfwkl.yaml  default_params.yaml  default_params_multilevel.yaml  test_params.yaml
params/Dialanine/: RNVP20000.yaml  RNVPfwkl.yaml  RNVPfwkl_trackgrad.yaml  RNVPrvkl.yaml  RNVPrvklLatent.yaml  RNVPrvkl_latent.yaml
params/OppA/Peptides/1b4z/: RNVPICfwkl.yaml  RNVPfwkl.yaml  RNVPfwkl000.yaml  RNVPfwkl200.yaml  RNVPfwkl2000.yaml  RNVPfwkl20000.yaml  RNVPfwkl_trackgrad.yaml
params/OppA/Peptides/1b5j/: RNVPICfwkl.yaml  RNVPfwkl.yaml
params/OppA/Peptides/1jet/: RNVPICfwkl.yaml  RNVPfwkl.yaml
params/OppA/Peptides/1jeu/: RNVPICfwkl.yaml  RNVPfwkl.yaml
params/OppA/Peptides/1qka/: RNVPICfwkl.yaml  (+1 more)
params/alanine_dipeptide/: RNVPICfwkl.yaml  RNVPfwkl.yaml  RNVPfwkl_low_data.yaml  RNVPfwkl_trackgrad.yaml  RNVPfwrvkl.yaml  RNVPpseudofwkl.yaml  RNVPrvkl.yaml  RNVPrvkl_latent.yaml  RNVPvar.yaml  RQSfwkl.yaml
params/double-well/: default_params.yaml  scale-1.yaml  scale-2.yaml  scale-3.yaml  scale02.yaml
params/peptides/: alanine_dipeptide.py
params/peptides/bgflow/: alanine_dipeptide.py
params/sweeper_params/: default_sweeper_params.yaml  sweep_subnet_width.yaml
params/toy/: two_moons.py
src/: LICENSE  TODO.md  double-well-pertubation.py  execute-main.sh  ic_experiments.ipynb  loadNsave_system.py  main.py  main_multilevel.py  main_sweep.py  onlyLoad_system.py  plot-double-well.ipynb  plotting.ipynb  plotting.py
src/.ipynb_checkpoints/: ic_experiments-checkpoint.ipynb  plotting-checkpoint.ipynb
src/lightning_bg/: __init__.py  architectures.py  data.py  double-well-pertubation.py  evaluate.py  models.py  utils.py
src/simplebg/: __init__.py  evaluate.py  latent.py  main.py  models.py  run.py  trainable.py  utils.py
src/simplebg/data/: __init__.py  dataset.py  handle.py  handler.py  load.py  loader.py  loaders.py  test_dataset.py
src/simplebg/experiment/: core.py  freia.py  resnet.py
src/simplebg/loss/: __init__.py  compute.py  core.py  fff.py  fff2.py  kl.py  misc.py
src/simplebg/model/: __init__.py  bgflow.py  core.py
src/simplebg/network/: __init__.py  base.py  bgflow.py  core.py  fff.py  freia.py  models.py  resnet.py  subnets.py  transforms.py
src/simplebg/trainable/: base.py
src/simplebg/transform/: ic.py
src/simplebg/transforms/: ic.py
src/simplebg/utils/: __init__.py  path.py  peptide.py
tests/data/: test_datasets.py  test_loader.py
tests/transform/: test_ic.py
(+5 files in other folders)
