[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_bg"
version = "0.1.0"
description = "A high-level library to make the training of Boltzmann Generators simple and reproducible."
#readme = "README.md"
requires-python = ">=3.10"
#license = { file = "LICENSE" }
keywords = ["Machine-Learning", "PyTorch-Lightning", "Boltzmann Generators"]

authors = [
    { name = "Frederik Kortkamp", email = "kortkamp@stud.uni-heidelberg.de" }
]

maintainers = [
    { name = "Frederik Kortkamp", email = "kortkamp@stud.uni-heidelberg.de" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Molecular Scientists",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # lightning-trainable
    "lightning-trainable@git+https://github.com/LarsKue/lightning-trainable",
    # FrEIA
    "freia@git+https://github.com/vislearn/FrEIA",
    # bgmol & bgflow
    "bgflow@git+https://github.com/noegroup/bgflow",
    "bgmol@git+https://github.com/noegroup/bgmol",
]
[project.urls]
"Homepage" = "https://github.com/thelostscout/lightning_bg"

