[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simplebg"
version = "0.1.0"
description = "A high-level library to make the training of Boltzmann Generators simple and reproducible."
#readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["Machine-Learning", "PyTorch-Lightning", "Boltzmann Generators"]

authors = [
    { name = "TheLostScout" }
]

maintainers = [
    { name = "TheLostScout" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Molecular Scientists",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mdtraj",
    # lightning-trainable
    "lightning-trainable@git+https://github.com/LarsKue/lightning-trainable ~= 0.3",
    # FrEIA
    "freia@git+https://github.com/vislearn/FrEIA ~= 0.2",
    # bgmol & bgflow
    "bgflow@git+https://github.com/noegroup/bgflow ~= 0.3",
    "bgmol@git+https://github.com/noegroup/bgmol ~= 0.2",
]
[project.urls]
"Homepage" = "https://github.com/thelostscout/simplebg"

